fixed layout. work on spacing details. then, move onto carousel

--- a/PortfolioVSD/PersonalSite/projectportfolio/resources/styles/main.scss
+++ b/PortfolioVSD/PersonalSite/projectportfolio/resources/styles/main.scss
@@ -1,6 +1,3 @@
-
-
-
 $primaryyellow: #E7C37B;
 $secondaryyellow: #F6E8CE;
 $darkshadeyellow: #D99E32;
@@ -113,7 +110,15 @@ sans-serif;
     }
 }
 
+@mixin bodyCircle {
+    width: 10rem;
+    height: 10rem;
+    background-color: $secondaryyellow;
+    border-radius: 50%;
+    grid-area: 2;
+    position: absolute;
 
+}
 
 
 // styles start
@@ -242,28 +247,6 @@ body {
                         opacity: .75;
                     }
 
-                    // & > div {
-                    //     display: block;
-                    //     &::before,
-                    //     &::after {
-                    //         content: '';
-                    //         display: block;
-                    //         margin: 5px auto;
-                    //         border-radius: 10px;
-                    //         border: 1px solid #000;
-                    //         animation: dot 3s infinite ease-in-out;
-                    //     }
-                    // &::before {
-                    //     width: 8px;
-                    //     height: 8px;
-                    //     animation-delay: .25s;
-                    // }
-
-                    // &::after {
-                    //     width: 6px;
-                    //     height: 6px;
-                    //     animation-delay: .5s;
-                    // }
                 }
             }
 
@@ -309,11 +292,11 @@ body {
 
 // section 2 PROJECTS
 .section-2 div {
-    border: 1px solid black;
+    // border: 1px solid black;
 }
 
 .section-2 {
-    @include positionChange(3rem, 0, 0, 0);
+    @include positionChange(60rem, 0, 0, 0);
     margin: 0 auto;
     padding: 0;
 
@@ -321,38 +304,41 @@ body {
         display: grid;
         grid-template-rows: repeat(3, 1fr);
         align-content: center;
-       
-        grid-row-gap: 4rem;
+height: 100%;
+        grid-row-gap: 12rem;
 
         .p1 {
             grid-area: 1/2/1/3;
+
+            .image-circle {
+                @include bodyCircle;
+            }
         }
 
         .p2 {
             grid-area: 2/2/2/3;
 
             .image-circle {
-                width: 10rem;
-                height: 10rem;
-                background-color: $secondaryyellow;
-                border-radius: 50%;
-                grid-area: 2;
-                position: absolute;
-                
+                @include bodyCircle;
             }
         }
 
         .p3 {
             grid-area: 3/2/3/3;
+
+            .image-circle {
+                @include bodyCircle;
+            }
         }
     }
 
     .project-content {
         display: grid;
-        grid-template: repeat(2, 90% 10%)/ repeat(3, 40% 20% 40%);
+        grid-template: repeat(2, 80% 20%)/ repeat(3, 40% 20% 40%);
         justify-items: center;
-        align-items: center; 
-        padding: 2rem; 
+        align-items: center;
+        grid-row-gap: 3rem;
+        // padding: 2rem;
 
         .project-image {
             @include positionChange(1rem, 0, 0, 0rem);
@@ -390,7 +376,17 @@ body {
         }
 
         .carousel1 {
+            grid-row: 1;
+            @include carouselMain();
+        }
+
+        .carousel2 {
             grid-row: 2;
+            @include carouselMain();
+        }
+
+        .carousel3 {
+            grid-row: 3;
             @include carouselMain();
         }
 
